Fixed app bar background image to stretch.

--- a/modules/wem-admin-ui/src/main/resources/web/admin/common/styles/api/app/appbar.less
+++ b/modules/wem-admin-ui/src/main/resources/web/admin/common/styles/api/app/appbar.less
@@ -5,6 +5,7 @@
   background-color:rgba(0,0,0,0.8);
   background-position: top center;
   overflow: hidden;
+  background-size: cover;
   .box-sizing(border-box);
 
   .launcher-button {
